add theme provider

--- a/web/package.json
+++ b/web/package.json
@@ -17,19 +17,14 @@
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
     "styled-components": "^5.3.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "zustand": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -46,5 +41,18 @@
   "devDependencies": {
     "typescript": "^4.5.2",
     "typescript-styled-plugin": "^0.18.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "off"
+    }
   }
 }
