--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         working-directory: ./web
-        run: npm ci
+        run: yarn
       - name: Build Web App
         working-directory: ./web
         run: npx ng build --configuration production --output-path ../bin/web/dist/web
