--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.3",
-    "@angular/common": "~13.1.3",
-    "@angular/compiler": "~13.1.3",
-    "@angular/core": "~13.1.3",
-    "@angular/forms": "~13.1.3",
-    "@angular/localize": "^13.1.3",
-    "@angular/platform-browser": "~13.1.3",
-    "@angular/platform-browser-dynamic": "~13.1.3",
-    "@angular/router": "~13.1.3",
+    "@angular/animations": "~13.2.4",
+    "@angular/common": "~13.2.4",
+    "@angular/compiler": "~13.2.4",
+    "@angular/core": "~13.2.4",
+    "@angular/forms": "~13.2.4",
+    "@angular/localize": "^13.2.4",
+    "@angular/platform-browser": "~13.2.4",
+    "@angular/platform-browser-dynamic": "~13.2.4",
+    "@angular/router": "~13.2.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
@@ -31,10 +31,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.4",
-    "@angular/cli": "^13.1.4",
-    "@angular/compiler-cli": "~13.1.3",
-    "@angular/language-service": "~13.1.3",
+    "@angular-devkit/build-angular": "~13.2.5",
+    "@angular/cli": "13.2",
+    "@angular/compiler-cli": "~13.2.4",
+    "@angular/language-service": "~13.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.11.1",
@@ -46,6 +46,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "marked": "^2.1.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.6.2",
     "tslint": "~6.1.0",
