Update ranna public API endpoint

--- a/config/config.example.yaml
+++ b/config/config.example.yaml
@@ -236,7 +236,7 @@ codeexec:
   # Ranna instance configutaion.
   ranna:
     apiversion: v1
-    endpoint: 'https://public.ranna.zekro.de'
+    endpoint: 'https://public.ranna.dev'
     token: ''
   # Rate limit configuration per user
   # for running code in chat.
