--- a/web/package.json
+++ b/web/package.json
@@ -21,10 +21,8 @@
     "zustand": "^3.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite serve",
+    "build": "tsc && vite build"
   },
   "browserslist": {
     "production": [
@@ -39,8 +37,11 @@
     ]
   },
   "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^4.5.2",
-    "typescript-styled-plugin": "^0.18.1"
+    "typescript-styled-plugin": "^0.18.1",
+    "vite": "^2.8.6",
+    "vite-plugin-svgr": "^1.0.1"
   },
   "eslintConfig": {
     "extends": [
