--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,7 @@
     "zustand": "^3.7.0"
   },
   "scripts": {
-    "start": "vite serve",
+    "start": "vite --port 8081",
     "build": "tsc && vite build"
   },
   "browserslist": {
@@ -37,7 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^1.2.0",
     "typescript": "^4.5.2",
     "typescript-styled-plugin": "^0.18.1",
     "vite": "^2.8.6",
