--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,12 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.12",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.7",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
