--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.12",
+    "color": "^4.2.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "@vitejs/plugin-react": "^1.2.0",
     "typescript": "^4.5.2",
     "typescript-styled-plugin": "^0.18.1",
