--- a/.github/workflows/artifacts-cd.yml
+++ b/.github/workflows/artifacts-cd.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.18rc1'
+          go-version: '1.18'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Retrieve frontend files
