--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.18rc1'
+          go-version: '1.18'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Retrieve frontend files
@@ -93,7 +93,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.18rc1'
+          go-version: '1.18'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
