--- a/.github/workflows/setup-cli.yml
+++ b/.github/workflows/setup-cli.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.18rc1'
+          go-version: '1.18'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
