fix setup build in release workflow

--- a/.github/workflows/releases-cd.yml
+++ b/.github/workflows/releases-cd.yml
@@ -102,7 +102,7 @@ jobs:
         env:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
-        run: go build -o ./bin/setup-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/shinpuru/main.go
+        run: go build -o ./bin/setup-${{ matrix.goos }}-${{ matrix.goarch }} ./cmd/setup/main.go
       - name: Rename Windows Binary
         if: ${{ matrix.goos == 'windows' }}
         env:
