--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.12",
     "color": "^4.2.1",
+    "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
