--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-uid": "^2.3.1",
     "sass": "^1.49.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^2.1.2",
