--- a/web.new/package.json
+++ b/web.new/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.7",
+    "react-markdown": "^8.0.1",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
