add member reporting and modal

--- a/web.new/package.json
+++ b/web.new/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.12",
+    "byte-formatter": "^1.0.1",
     "color": "^4.2.1",
     "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
