update terraform template

--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -23,7 +23,7 @@ RUN corepack enable \
 # Install Angular CLI
 RUN yarn global add @angular/cli --prefix /usr/local
 
-# Install Taskfile
+# Install Taskfile and Mockery
 RUN env GOBIN=/bin go install github.com/go-task/task/v3/cmd/task@latest
 RUN env GOBIN=/bin go install github.com/vektra/mockery/v2@latest
 
