add coverage test to tests CI

--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -28,4 +28,12 @@ jobs:
 
       - name: Run tests
         run: |
-          go test -v -cover github.com/zekroTJA/shinpuru/...
+          go test -v -timeout 300s -covermode atomic -coverprofile=covprofile ./...
+
+      - name: Upload Coverage Report
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GO111MODULE: off
+        run: |
+          go get github.com/mattn/goveralls
+          goveralls -coverprofile=covprofile -service=github
