only run wiki generation when commands change

--- a/.github/workflows/wiki-ci.yml
+++ b/.github/workflows/wiki-ci.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
       - dev
-    paths-ignore:
-      - '**.md'
+    paths:
+      - 'internal/slashcommands/**'
 
 jobs:
   wiki-generate:
