--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -48,6 +48,8 @@ tasks:
           {{.EMBED_DIR}}/Release.txt
 
   build-be:
+    desc:
+      Builds the backend binary.
     sources:
       - cmd/**
       - internal/**
@@ -70,6 +72,8 @@ tasks:
       - yarn
 
   build-fe:
+    desc:
+      Builds the frontend artifacts of the Angular web app.
     deps:
       - deps-fe
     dir: web
@@ -93,6 +97,8 @@ tasks:
       - yarn
 
   build-fe-new:
+    desc:
+      Builds the frontend artifacts of the new React web app.
     dir: web.new
     deps:
       - deps-fe-new
@@ -105,6 +111,8 @@ tasks:
       - yarn run build
 
   init-dev:
+    desc:
+      Creates a new development config from {{.CONFIG_DIR}}/my.private.config.yml.
     preconditions:
       - sh: ls {{.CONFIG_DIR}}/private.config.yml && exit 1 || exit 0
         msg: "{{.CONFIG_DIR}}/private.config.yml already exists"
@@ -114,6 +122,8 @@ tasks:
         silent: true
 
   run:
+    desc:
+      Builds the backend binaries and runs them with the development configuration.
     deps:
       - build-be
     preconditions:
@@ -127,6 +137,8 @@ tasks:
           {{.CLI_ARGS}}"
 
   run-fe:
+    desc:
+      Runs the Angular development server for the web app.
     deps:
       - deps-fe
     dir: web
@@ -134,6 +146,8 @@ tasks:
       - yarn start
 
   run-fe-new:
+    desc:
+      Runs the vite development server for the new React web app.
     deps:
       - deps-fe-new
     dir: web.new
@@ -141,10 +155,14 @@ tasks:
       - yarn start
 
   test:
+    desc:
+      Executes backend unit tests.
     cmds:
       - go test -race -v -cover ./...
 
   apidocs:
+    desc:
+      Generates API documentation from the controller descriptions.
     preconditions:
       - sh: which swag
         msg:
@@ -167,6 +185,8 @@ tasks:
           -o {{.APIDOCS_OUTDIR}}/restapi.md
 
   build-setup-tool:
+    desc:
+      Builds the binary for the setup tool.
     sources:
       - cmd/**
       - pkg/**
@@ -178,6 +198,8 @@ tasks:
           cmd/setup/main.go
 
   build-cmdman-tool:
+    desc:
+      Builds the binary for the command manual (cmdman) tool.
     sources:
       - cmd/**
       - pkg/**
@@ -189,6 +211,8 @@ tasks:
           cmd/cmdman/main.go
 
   refresh-interfaces:
+    desc:
+      Refreshes the interfaces for libraries like Discordgo.
     preconditions:
       - sh: which schnittstelle
         msg:
@@ -209,6 +233,8 @@ tasks:
           -out pkg/discordutil/isession.go
 
   refresh-mocks:
+    desc:
+      Refreshes the mock implementations in ./mock.
     preconditions:
       - sh: which mockery
         msg:
@@ -221,3 +247,11 @@ tasks:
           --name ISession
           --structname ISession
           --filename ISession.go
+
+  help:
+    cmds:
+      - cmd: |
+          echo 'Use "task --list" to get a list of all available tasks with a short desciption of what they do.'
+          echo 'There are some more tasks used as dependencies for other tasks.'
+          echo 'You can view them with "task --list-all".'
+        silent: true
