--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -28,4 +28,4 @@ jobs:
 
       - name: Run tests
         run: |
-          go test -v -timeout 300s -race -cover ./...
+          go test -v -timeout 300s -cover ./...
