--- a/web.new/package.json
+++ b/web.new/package.json
@@ -7,6 +7,7 @@
     "color": "^4.2.1",
     "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
+    "emoji.json": "^13.1.0",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
@@ -24,15 +25,15 @@
     "zustand": "^3.7.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/color": "^3",
+    "@types/debounce": "^1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5",
     "@types/styled-components": "^5",
-    "@types/color": "^3",
-    "@types/debounce": "^1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "typescript": "^4.7",
