update bug report template

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -19,6 +19,7 @@ body:
         - Functional Issue
         - Breaking Issue
         - Crash
+        - Tooling Issue
     validations:
       required: true
   - type: dropdown
