--- a/web.new/package.json
+++ b/web.new/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.28.0",
     "debounce": "^1.2.1",
     "emoji.json": "^13.1.0",
+    "fuse.js": "^6.6.2",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
