--- a/web.new/package.json
+++ b/web.new/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-uid": "^2.3.1",
+    "react-wavify": "^1.7.0",
     "sass": "^1.49.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^2.1.2",
