--- a/web.new/package.json
+++ b/web.new/package.json
@@ -15,6 +15,7 @@
     "i18next-http-backend": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-i18next": "^11.15.7",
     "react-markdown": "^8.0.1",
     "react-router": "^6.0.2",
