add PWA service worker

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "shinpuru",
+  "name": "shinpuru web interface",
+  "description": "The web interface of the shinpuru Discord bot.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,8 +19,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
+  "orientation": "any",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
