--- a/web/package.json
+++ b/web/package.json
@@ -42,7 +42,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "typescript": "^4.7",
     "typescript-styled-plugin": "^0.18.1",
-    "vite": "^2.8.6",
+    "vite": "^4.1.4",
+    "vite-plugin-pwa": "^0.14.4",
     "vite-plugin-svgr": "^1.0.1"
   },
   "scripts": {
