update coder template image

--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -8,9 +8,12 @@ RUN apt clean \
   && apt update -y
 
 # Install Golang
-RUN sudo add-apt-repository ppa:longsleep/golang-backports \
-  && apt update -y \
-  && apt install -y golang
+RUN curl -L "https://go.dev/dl/$(curl -Ls https://go.dev/VERSION?m=text).linux-amd64.tar.gz" \
+  | tar -C /usr/local -xzv
+
+RUN ls -lisah /usr/local/go/bin
+
+RUN echo 'export PATH=$PATH:/usr/local/go/bin' >> ~/.profile
 
 # Install NodeJS
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash - \
@@ -24,10 +27,14 @@ RUN corepack enable \
 RUN yarn global add @angular/cli --prefix /usr/local
 
 # Install Tools
-RUN env GOBIN=/bin go install github.com/go-task/task/v3/cmd/task@latest
-RUN env GOBIN=/bin go install github.com/vektra/mockery/v2@latest
-RUN env GOBIN=/bin go install github.com/swaggo/swag/cmd/swag@latest
-RUN env GOBIN=/bin go install github.com/zekrotja/schnittstelle/cmd/schnittstelle@latest
+RUN env GOBIN=/bin /usr/local/go/bin/go install github.com/go-task/task/v3/cmd/task@latest
+RUN env GOBIN=/bin /usr/local/go/bin/go install github.com/vektra/mockery/v2@latest
+RUN env GOBIN=/bin /usr/local/go/bin/go install github.com/swaggo/swag/cmd/swag@latest
+RUN env GOBIN=/bin /usr/local/go/bin/go install github.com/zekrotja/schnittstelle/cmd/schnittstelle@latest
+RUN env GOBIN=/bin /usr/local/go/bin/go install github.com/charmbracelet/vhs@latest
+RUN env GOBIN=/bin /usr/local/go/bin/go install github.com/homeport/termshot/cmd/termshot@latest
 RUN npm install -g swagger-markdown
 
 USER coder
+
+RUN echo 'export PATH=$PATH:/usr/local/go/bin' >> ~/.profile
