--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.13.8",
     "react-uid": "^2.3.1",
     "react-wavify": "^1.7.0",
     "sass": "^1.49.0",
