--- a/config/coder.private.config.yml
+++ b/config/coder.private.config.yml
@@ -1,11 +1,11 @@
 configVersionPleaseDoNotChange: 6
 
 discord:
-  token: "<your discord token>"
-  generalprefix: ";;"
-  ownerid: "<your discord user id>"
-  clientid: "<your bots client id>"
-  clientsecret: "<your bots client secret>"
+  token: '<your discord token>'
+  generalprefix: ';;'
+  ownerid: '<your discord user id>'
+  clientid: '<your bots client id>'
+  clientsecret: '<your bots client secret>'
   disabledcommands:
   # globalcommandratelimit:
   #   burst: 1
@@ -13,35 +13,39 @@ discord:
 
 permissions:
   defaultuserrules:
-  - +sp.etc.*
-  - +sp.chat.*
+    - +sp.etc.*
+    - +sp.chat.*
   defaultadminrules:
-  - +sp.guild.*
-  - +sp.etc.*
-  - +sp.chat.*
+    - +sp.guild.*
+    - +sp.etc.*
+    - +sp.chat.*
 
 database:
   type: mysql
   mysql:
-    host: "mysql:3306"
+    host: 'mysql:3306'
     user: root
     database: shinpuru
     password: dev
 
 cache:
   redis:
-    addr: "redis:6379"
+    addr: 'redis:6379'
     type: 0
   cachedatabase: true
+  lifetimes:
+    general: 30d
+    member: 90d
+    user: 90d
 
 storage:
   type: minio
   # file:
   #   location: ./data
   minio:
-    endpoint: "minio:9000"
-    accesskey: "yuri69"
-    accesssecret: "yuri69_secret_key"
+    endpoint: 'minio:9000'
+    accesskey: 'yuri69'
+    accesssecret: 'yuri69_secret_key'
     secure: false
 
 logging:
@@ -49,13 +53,13 @@ logging:
   loglevel: 5
 
 twitchapp:
-  clientid: ""
-  clientsecret: ""
+  clientid: ''
+  clientsecret: ''
 
 webserver:
   enabled: true
   addr: :8080
-  apitokenkey: "12345678901234567890123456789012"
+  apitokenkey: '12345678901234567890123456789012'
   tls:
     enabled: false
   publicaddr: http://localhost:8080
@@ -65,8 +69,8 @@ webserver:
     burst: 50
     limitseconds: 3
   captcha:
-    sitekey: "20000000-ffff-ffff-ffff-000000000002"
-    secretkey: "0x0000000000000000000000000000000000000000"
+    sitekey: '20000000-ffff-ffff-ffff-000000000002'
+    secretkey: '0x0000000000000000000000000000000000000000'
 
 # metrics:
 #   enable: true
