--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -7,18 +7,18 @@ configVersionPleaseDoNotChange: 6
 # Discord specific configuration
 discord:
   # Your bot's token you will get from https://discord.com/developers/applications
-  token: "MzI4NTc5NjU2MzIyMjUyODAx.DySqfg.6ZZznoZ6A6ZfeM2PiKSyQup05MI"
+  token: 'MzI4NTc5NjU2MzIyMjUyODAx.DySqfg.6ZZznoZ6A6ZfeM2PiKSyQup05MI'
   # The global prefix which will be always usable on all guilds
-  generalprefix: "sp!"
+  generalprefix: 'sp!'
   # The Discord ID of the host of the bot
   # This user will have FULL PERMISSIONS on all guilds
-  ownerid: "221905671296253953"
+  ownerid: '221905671296253953'
   # The client ID of the bot's application account
   # Get this from https://discord.com/developers/applications
-  clientid: "536916384026722314"
+  clientid: '536916384026722314'
   # The client secret for the bot's application account
   # Get this from https://discord.com/developers/applications
-  clientsecret: "273n9awshbr3w7zb5cq3ucbq234q43q"
+  clientsecret: '273n9awshbr3w7zb5cq3ucbq234q43q'
   # Specify a maximum of guilds the bot can
   # be member of. When set to 0, there is
   # no limit applied.
@@ -54,40 +54,40 @@ permissions:
   # Default permissions for users without any
   # previleges
   defaultuserrules:
-  - +sp.etc.*
-  - +sp.chat.*
+    - +sp.etc.*
+    - +sp.chat.*
   # Default permissions for guild owners
   # and admins
   defaultadminrules:
-  - +sp.guild.*
-  - +sp.etc.*
-  - +sp.chat.*
+    - +sp.guild.*
+    - +sp.etc.*
+    - +sp.chat.*
 
 # Database sepcific configuration
 database:
   # Currently, this bot supports only MySql (MariaDB).
   # But when more database bindings are available, here
   # you can choose which one to use.
-  type: "mysql"
+  type: 'mysql'
   # MySQL (MariaDB) configuration
   mysql:
     # Host address of the database
-    host: "mysql.example.com"
+    host: 'mysql.example.com'
     # Username of the database account
-    user: "shinpuru"
+    user: 'shinpuru'
     # Password for the used database account
-    password: "5up3rb4dp455w0rd"
+    password: '5up3rb4dp455w0rd'
     # Database name
-    database: "shinpuru"
+    database: 'shinpuru'
 
 # Caching prefrences.
 cache:
   # Redis connection configuration.
   redis:
     # Redis host address
-    addr: "localhost:6379"
+    addr: 'localhost:6379'
     # Redis password
-    password: "myredispassword"
+    password: 'myredispassword'
     # Database type
     type: 0
   # If enabled, most frequently used database
@@ -98,6 +98,17 @@ cache:
   # you want to disable it for whatever reason,
   # you can do it here.
   cachedatabase: true
+  # Define cache durations for different objects.
+  # When `general` is set, this value will be applied
+  # to all values which are not set as default lifetime.
+  # Here you can find a list of all objects:
+  # https://pkg.go.dev/github.com/zekrotja/dgrs#Lifetimes
+  # If nothing is defined here, a default caching
+  # lifetime of 7 days is applied for all objects.
+  lifetimes:
+    general: 30d
+    member: 90d
+    user: 90d
 
 # Logging preferences
 logging:
@@ -113,16 +124,16 @@ logging:
     # Whether to enable sending logs to loki or not
     enabled: false
     # The address of the loki instance
-    address: "https://loki.example.com"
+    address: 'https://loki.example.com'
     # The basic auth user name (leave empty if not used)
-    username: "username"
+    username: 'username'
     # The basic auth password (leave empty if not used)
-    password: "2374n8er7nt8034675782345"
+    password: '2374n8er7nt8034675782345'
     # Additional labels set to all log entries.
     labels:
       # Some examples ...
-      app: "shinpuru"
-      instance: "main"
+      app: 'shinpuru'
+      instance: 'main'
 
 # Storage interface configuration
 storage:
@@ -130,17 +141,17 @@ storage:
   # 'minio' as storage interfaces.
   # Minio also supprts connecting to Amazon S3
   # or google Cloud.
-  type: "minio"
+  type: 'minio'
   # Minio interface configuration
   minio:
     # Endpoint address of the storage
-    endpoint: "minio.exmaple.com"
+    endpoint: 'minio.exmaple.com'
     # Storage access key
-    accesskey: "my_minio_access_key"
+    accesskey: 'my_minio_access_key'
     # Storage access secret
-    accesssecret: "my_minio_access_secret"
+    accesssecret: 'my_minio_access_secret'
     # Main location to be used
-    location: "us-east-1"
+    location: 'us-east-1'
     # Use HTTPS for API calls
     secure: true
   # File interface configuration
@@ -161,16 +172,16 @@ webserver:
     # Use TLS (HTTPS)
     enabled: false
     # TLS certificate location
-    cert: "/etc/cert/mycert.pem"
+    cert: '/etc/cert/mycert.pem'
     # TLS keyfile location
-    key: "/etc/cert/mykey.pem"
+    key: '/etc/cert/mykey.pem'
   # The address, the web server will be accessable
   # This value MUST be the same address as configured
   # in the OAuth2 preferences of your bots application
-  publicaddr: "https://shinpuru.example.com"
+  publicaddr: 'https://shinpuru.example.com'
   # Debug address which is set during debugging as
   # CORS origin domain.
-  debugpublicaddr: "http://localhost:8081"
+  debugpublicaddr: 'http://localhost:8081'
   # Ratelimit configuration
   ratelimit:
     # Whether or not to enable rate limiter
@@ -196,9 +207,9 @@ webserver:
   # Obtainable from https://dashboard.hcaptcha.com/overview
   captcha:
     # Captcha Site Key
-    sitekey: "20000000-ffff-ffff-ffff-000000000002"
+    sitekey: '20000000-ffff-ffff-ffff-000000000002'
     # Captcha Account Secret Key
-    secretkey: "0x0000000000000000000000000000000000000000"
+    secretkey: '0x0000000000000000000000000000000000000000'
 
 # Credentials of the twitch app to connect to the
 # twitch API
@@ -207,16 +218,16 @@ webserver:
 # https://glass.twitch.tv/console/apps
 twitchapp:
   # Client ID
-  clientid: "zcwbsvg71qmo6to9813jkdvsh1rch4"
+  clientid: 'zcwbsvg71qmo6to9813jkdvsh1rch4'
   # Client Secret
-  clientsecret: "nlf6pl00vf4hz4oszgxytlpo9q6h52"
+  clientsecret: 'nlf6pl00vf4hz4oszgxytlpo9q6h52'
 
 # Giphy API configuration.
 giphy:
   # API key for the Giphy REST API.
   # This can be obtained by creating an API app here:
   # https://developers.giphy.com/dashboard/
-  apikey: "dWl3ZXF6diBzZGR0NnczNDg5NTZuZG4w"
+  apikey: 'dWl3ZXF6diBzZGR0NnczNDg5NTZuZG4w'
 
 # Prometheus metrics endpoint configuration
 metrics:
@@ -226,7 +237,7 @@ metrics:
   # The address the metrics HTTP server binds
   # to. This is defaultly ":9091" if not
   # specified
-  addr: ":9091"
+  addr: ':9091'
 
 # Time Schedule specifications.
 # Time schedules are specified using the crontab
@@ -236,7 +247,7 @@ metrics:
 # https://pkg.go.dev/github.com/robfig/cron/v3#hdr-Usage
 schedules:
   # Guild backup schedule
-  guildbackups:        '0 0 6,18 * * *'
+  guildbackups: '0 0 6,18 * * *'
   # Refresh token cleanup schedule
   refreshtokencleanup: '0 0 5 * * *'
 
@@ -277,9 +288,9 @@ privacy:
   noticeurl: https://github.com/zekroTJA/shinpuru/blob/master/PRIVACY.md
   # Contact details.
   contact:
-      # Title of the contact type
+    # Title of the contact type
     - title: E-Mail
       # The displayed value
       value: contact@example.de
       # An optional link URL
-      url: "mailto:contact@example.de"
+      url: 'mailto:contact@example.de'
