--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,14 +15,13 @@ tasks:
     deps: [release]
 
   release:
-    desc:
-      Build release artifacts of the backend, web frontend and tools.
+    desc: Build release artifacts of the backend, web frontend and tools.
     cmds:
       - rm -rf {{.RELEASE_DIR}}
       - task: embed-fe
       - task: build-fe-new
       - task: build-be
-        vars: { RELEASE: "true" }
+        vars: { RELEASE: 'true' }
       - task: build-setup-tool
       - mkdir {{.RELEASE_DIR}}
       - cp {{.BIN_DIR}}/shinpuru{{exeExt}} {{.RELEASE_DIR}}
@@ -40,22 +39,21 @@ tasks:
   cleanup-embeds:
     cmds:
       - git checkout
-          {{.EMBED_DIR}}/AppVersion.txt
-          {{.EMBED_DIR}}/AppCommit.txt
-          {{.EMBED_DIR}}/AppDate.txt
-          {{.EMBED_DIR}}/Release.txt
+        {{.EMBED_DIR}}/AppVersion.txt
+        {{.EMBED_DIR}}/AppCommit.txt
+        {{.EMBED_DIR}}/AppDate.txt
+        {{.EMBED_DIR}}/Release.txt
 
   build-be:
-    desc:
-      Builds the backend binary.
+    desc: Builds the backend binary.
     cmds:
       - task: embed-versions
-        vars: { RELEASE: "{{.RELEASE}}" }
+        vars: { RELEASE: '{{.RELEASE}}' }
       - defer: { task: cleanup-embeds }
       - go build
-          -v
-          -o {{.BIN_DIR}}/shinpuru{{exeExt}}
-          cmd/shinpuru/main.go
+        -v
+        -o {{.BIN_DIR}}/shinpuru{{exeExt}}
+        cmd/shinpuru/main.go
 
   embed-fe:
     deps:
@@ -72,8 +70,7 @@ tasks:
       - yarn
 
   build-fe:
-    desc:
-      Builds the frontend artifacts of the new React web app.
+    desc: Builds the frontend artifacts of the new React web app.
     dir: web
     deps:
       - deps-fe
@@ -81,24 +78,22 @@ tasks:
       - public/**
       - src/**
       - index.html
-      - "*.png"
+      - '*.png'
     cmds:
       - yarn run build --base=/
 
   init-dev:
-    desc:
-      Creates a new development config from {{.CONFIG_DIR}}/my.private.config.yml.
+    desc: Creates a new development config from {{.CONFIG_DIR}}/my.private.config.yml.
     preconditions:
       - sh: ls {{.CONFIG_DIR}}/private.config.yml && exit 1 || exit 0
-        msg: "{{.CONFIG_DIR}}/private.config.yml already exists"
+        msg: '{{.CONFIG_DIR}}/private.config.yml already exists'
     cmds:
       - cp {{.CONFIG_DIR}}/my.private.config.yml {{.CONFIG_DIR}}/private.config.yml
       - cmd: echo Please go to {{.CONFIG_DIR}}/private.config.yml and enter your credentials!
         silent: true
 
   run:
-    desc:
-      Builds the backend binaries and runs them with the development configuration.
+    desc: Builds the backend binaries and runs them with the development configuration.
     deps:
       - build-be
     preconditions:
@@ -107,13 +102,12 @@ tasks:
           config/private.config.yml does not exist. Please run 'task init-dev' and
           enter your credentials into the generated config file.
     cmds:
-      - "{{.BIN_DIR}}/shinpuru
-          -c {{.CONFIG_DIR}}/private.config.yml
-          {{.CLI_ARGS}}"
+      - '{{.BIN_DIR}}/shinpuru
+        -c {{.CONFIG_DIR}}/private.config.yml
+        {{.CLI_ARGS}}'
 
   run-fe:
-    desc:
-      Runs the Angular development server for the web app.
+    desc: Runs the Angular development server for the web app.
     deps:
       - deps-fe
     dir: web
@@ -121,8 +115,7 @@ tasks:
       - yarn start
 
   run-fe-new:
-    desc:
-      Runs the vite development server for the new React web app.
+    desc: Runs the vite development server for the new React web app.
     deps:
       - deps-fe-new
     dir: web
@@ -130,14 +123,12 @@ tasks:
       - yarn start --base=/
 
   test:
-    desc:
-      Executes backend unit tests.
+    desc: Executes backend unit tests.
     cmds:
       - go test -race -v -cover ./...
 
   apidocs:
-    desc:
-      Generates API documentation from the controller descriptions.
+    desc: Generates API documentation from the controller descriptions.
     preconditions:
       - sh: which swag
         msg:
@@ -151,43 +142,40 @@ tasks:
           $ npm install -g swagger-markdown
     cmds:
       - swag init
-          -g ./internal/services/webserver/v1/router.go
-          -o {{.APIDOCS_OUTDIR}}
-          --parseDependency --parseDepth 2
+        -g ./internal/services/webserver/v1/router.go
+        -o {{.APIDOCS_OUTDIR}}
+        --parseDependency --parseDepth 2
       - rm {{.APIDOCS_OUTDIR}}/docs.go
       - swagger-markdown
-          -i {{.APIDOCS_OUTDIR}}/swagger.json
-          -o {{.APIDOCS_OUTDIR}}/restapi.md
+        -i {{.APIDOCS_OUTDIR}}/swagger.json
+        -o {{.APIDOCS_OUTDIR}}/restapi.md
 
   build-setup-tool:
-    desc:
-      Builds the binary for the setup tool.
+    desc: Builds the binary for the setup tool.
     sources:
       - cmd/**
       - pkg/**
       - internal/**
     cmds:
       - go build
-          -v
-          -o {{.BIN_DIR}}/setup{{exeExt}}
-          cmd/setup/main.go
+        -v
+        -o {{.BIN_DIR}}/setup{{exeExt}}
+        cmd/setup/main.go
 
   build-cmdman-tool:
-    desc:
-      Builds the binary for the command manual (cmdman) tool.
+    desc: Builds the binary for the command manual (cmdman) tool.
     sources:
       - cmd/**
       - pkg/**
       - internal/**
     cmds:
       - go build
-          -v
-          -o {{.BIN_DIR}}/cmdman{{exeExt}}
-          cmd/cmdman/main.go
+        -v
+        -o {{.BIN_DIR}}/cmdman{{exeExt}}
+        cmd/cmdman/main.go
 
   refresh-interfaces:
-    desc:
-      Refreshes the interfaces for libraries like Discordgo.
+    desc: Refreshes the interfaces for libraries like Discordgo.
     preconditions:
       - sh: which schnittstelle
         msg:
@@ -201,29 +189,35 @@ tasks:
         sh: echo $(go env GOPATH)/pkg/mod/github.com/bwmarrin/discordgo@{{.DISCORDGO_VERSION}}
     cmds:
       - schnittstelle
-          --root {{.DISCORDGO_PATH}}
-          --struct Session
-          --interface ISession
-          --package discordutil
-          --import 'image'
-          --import 'io'
-          --import 'time'
-          --import '. "github.com/bwmarrin/discordgo"'
-          --out pkg/discordutil/isession.go
-          --format
+        --root {{.DISCORDGO_PATH}}
+        --struct Session
+        --interface ISession
+        --package discordutil
+        --import 'image'
+        --import 'io'
+        --import 'time'
+        --import '. "github.com/bwmarrin/discordgo"'
+        --out pkg/discordutil/isession.go
+        --format
 
   lint-fe:
-    desc:
-      Runs the vite development server for the new React web app.
+    desc: Runs the vite development server for the new React web app.
     deps:
       - deps-fe
     dir: web
     cmds:
       - yarn lint
 
+  lint-be:
+    desc: Run backend staticcheck linter.
+    preconditions:
+      - sh: which staticcheck
+        msg: staticcheck is not installed!
+    cmds:
+      - staticcheck -checks all,-ST1000,-ST1022,-ST1003,-ST1001,-SA1016 ./...
+
   refresh-mocks:
-    desc:
-      Refreshes the mock implementations in ./mock.
+    desc: Refreshes the mock implementations in ./mock.
     deps:
       - refresh-interfaces
     preconditions:
