--- a/.github/workflows/setup-cli.yml
+++ b/.github/workflows/setup-cli.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "master"
-      - "dev"
+      - 'master'
+      - 'dev'
     paths:
-      - "cmd/setup/**"
+      - 'cmd/setup/**'
 
 jobs:
   cli:
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.19'
+          go-version: '^1.20'
       - name: Check out code
         uses: actions/checkout@v2
       - name: Get dependencies
