--- a/.github/workflows/tests-ci.yml
+++ b/.github/workflows/tests-ci.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - '*'
     paths:
-      - "**.go"
-      - ".github/workflows/**"
+      - '**.go'
+      - '.github/workflows/**'
 
 jobs:
   tests:
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.19'
+          go-version: '^1.20'
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
